--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,7 @@
-INDEX
+<link rel="stylesheet" href="/css/index.css"/>
+<script type="text/javascript" src="/js/index.js"></script>
+
+<div id="test"><div class="box red"></div></div>
+<div class="box green"></div>
+<div class="box blue"></div>
+<div class="box yellow"></div>
