--- a/public/css/register.css
+++ b/public/css/register.css
@@ -17,7 +17,7 @@
 	margin: auto;
 
 	height: 100%;
-	width: 100%
+	width: 100%;
 }
 
 .registerContainer {
@@ -29,7 +29,6 @@
 	right: 0;
 
 	max-height: 100%;
-
 	max-width: 70%;
 	min-width: 100px;
 
@@ -174,6 +173,7 @@
     margin-bottom: 8px;
     background-color: rgb(0,0,0,0);
     z-index: 1;
+    cursor: pointer;
 
 }
 
