--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -3,7 +3,8 @@
 	<head>
 		<title>APP</title>
 		<link rel="stylesheet" href="/css/bootstrap.css" />
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		
 	</head>
 	<body>
 		<div class="row">
@@ -14,5 +15,6 @@
         </div>
         {{{body}}}
     </div>
+
 	</body>
 </html>
