--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="/js/register.js"></script>
 <link rel="stylesheet" href="/css/register.css" />
 <link rel="stylesheet" href="/css/style.css" />
-
+<link rel="stylesheet" href="/css/animate.css" />
 
 <body class="bodyBackground">
 
@@ -14,12 +14,12 @@
 			<br>
 			<form class="registerForm" method="post" action="/users/register" id="registerForm">	  
 				<div></div>
-			  	<input class="transparentTextInput" type="text" placeholder="Email" id="registerNameField" name="email"> <br> 
-			  	<input class="transparentTextInput" type="password" placeholder="Password" id="registerPasswordField" name='password'> <br> 
-			  	<input class="transparentTextInput" type="password" placeholder="Retype Password" id="retypeRegisterPasswordField" name ='retypepassword'> <br> 
+			  	<input class="transparentTextInput" type="text" placeholder="Email" id="registerNameField" name="email" disabled="disabled"> <br> 
+			  	<input class="transparentTextInput" type="password" placeholder="Password" id="registerPasswordField" name='password' disabled="disabled"> <br> 
+			  	<input class="transparentTextInput" type="password" placeholder="Retype Password" id="retypeRegisterPasswordField" name ='retypepassword' disabled="disabled"> <br> 
 
 			  	<div class="dropdown">
-				<button type="button" id="school" onclick="myFunction('schoolDropdown')" class="dropbtn">School</button>
+				<button type="button" id="school" onclick="myFunction('schoolDropdown')" class="dropbtn" disabled="disabled">School</button>
 				  <div id="schoolDropdown" class="dropdown-content">
 				    <input name="school" type="text" placeholder="Search.." id="schoolInput" onkeyup="filterFunction('schoolInput','schoolDropdown')">
 				    <a href="#" onclick="changeText('school','Washington State University')">Washington State University</a>
@@ -29,7 +29,7 @@
 				</div> <br>
 
 				<div class="dropdown">
-					<button type="button" id="degree" onclick="myFunction('degreeDropdown')" class="dropbtn">Degree</button>
+					<button type="button" id="degree" onclick="myFunction('degreeDropdown')" class="dropbtn" disabled="disabled">Degree</button>
 					  <div id="degreeDropdown" class="dropdown-content">
 					    <input name="degree" type="text" placeholder="Search.." id="degreeInput" onkeyup="filterFunction('degreeInput','degreeDropdown')">
 					    <a href="#" onclick="changeText('degree','Bachelor Degree in')">Bachelor Degree in</a>
@@ -39,7 +39,7 @@
 				</div> <br>
 
 				<div class="dropdown">
-					<button type="button" id="major" onclick="myFunction('majorDropdown')" class="dropbtn">Major</button>
+					<button type="button" id="major" onclick="myFunction('majorDropdown')" class="dropbtn" disabled="disabled">Major</button>
 					  <div id="majorDropdown" class="dropdown-content">
 					    <input name="major" type="text" placeholder="Search.." id="majorInput" onkeyup="filterFunction('majorInput','majorDropdown')">
 					    <a href="#" onclick="changeText('major','Computer Science')">Computer Science</a>
@@ -47,9 +47,9 @@
 					  </div>
 				</div>
 
-				<div class="registerButtonContainer"><button type="button" class="registerButton" onclick="registerIsClicked()">Register</button></div>
+				<div class="registerButtonContainer"><button type="button" class="registerButton" id="registerButton" onclick="registerIsClicked()" disabled="disabled">Register</button></div>
 
-				<div class="backButtonContainer "><button type="button" class="backButton" onclick="backIsClickded()">back</button></div>
+				<div class="backButtonContainer "><button type="button" class="backButton" id="backButton" onclick="backIsClickded()" disabled="disabled">back</button></div>
 				
 				{{#if errors}}
 				      	<div class="errorContainer" id="errorContainer"><h1 class="error">{{errors.0.msg}}</h1></div>
